// Vitest Snapshot v1

exports[`(component) EventOverview > Snap Shot - close 1`] = `
<div>
  <div
    class="_enshita-event-overview_504de2"
  >
    <div
      class="_enshita-event-date_06bc2d"
    >
      <time>
        2022/08/27 (Sat)
      </time>
      <time>
        <span>
          19:30 ~ 23:00
        </span>
      </time>
    </div>
    <div
      class="_enshita-event-venue_504de2"
    >
      <span />
      <p>
        Discord
      </p>
    </div>
    <div
      class="_enshita-event-apply_504de2"
    >
      <button
        class="_enshita-button-box_44d66e _enshita-event-apply-box_504de2"
        disabled=""
        tabindex="0"
      >
        <p
          class="_enshita-button-text_44d66e undefined"
        >
          申し込みは終了しました
        </p>
      </button>
    </div>
    <div
      class="_enshita-event-deadline_504de2"
    >
      <time>
        2022/08/27 (Sat) 00:00まで
      </time>
      <p>
        ※申し込み締切時間は変更される可能性があります
      </p>
    </div>
    <div
      class="_enshita-event-speaker-quota-type-list_504de2"
    >
      <div
        class="_enshita-event-speaker-quota-type_504de2"
      >
        <p
          class="_enshita-event-speaker-quota-type-name_504de2"
        >
          3分枠
        </p>
        <p
          class="_enshita-event-speaker-quota-type-currently_504de2"
        >
          2
           / 
          5
        </p>
      </div>
      <div
        class="_enshita-event-speaker-quota-type_504de2"
      >
        <p
          class="_enshita-event-speaker-quota-type-name_504de2"
        >
          5分枠
        </p>
        <p
          class="_enshita-event-speaker-quota-type-currently_504de2"
        >
          3
           / 
          5
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`(component) EventOverview > Snap Shot - finish 1`] = `
<div>
  <div
    class="_enshita-event-overview_504de2"
  >
    <div
      class="_enshita-event-date_06bc2d"
    >
      <time>
        2022/08/27 (Sat)
      </time>
      <time>
        <span>
          19:30 ~ 23:00
        </span>
      </time>
    </div>
    <div
      class="_enshita-event-venue_504de2"
    >
      <span />
      <p>
        Discord
      </p>
    </div>
    <div
      class="_enshita-event-apply_504de2"
    >
      <button
        class="_enshita-button-box_44d66e _enshita-event-apply-box_504de2"
        disabled=""
        tabindex="0"
      >
        <p
          class="_enshita-button-text_44d66e undefined"
        >
          イベントは終了しました
        </p>
      </button>
    </div>
    <div
      class="_enshita-event-deadline_504de2"
    >
      <time>
        2022/08/27 (Sat) 00:00まで
      </time>
      <p>
        ※申し込み締切時間は変更される可能性があります
      </p>
    </div>
    <div
      class="_enshita-event-speaker-quota-type-list_504de2"
    >
      <div
        class="_enshita-event-speaker-quota-type_504de2"
      >
        <p
          class="_enshita-event-speaker-quota-type-name_504de2"
        >
          3分枠
        </p>
        <p
          class="_enshita-event-speaker-quota-type-currently_504de2"
        >
          2
           / 
          5
        </p>
      </div>
      <div
        class="_enshita-event-speaker-quota-type_504de2"
      >
        <p
          class="_enshita-event-speaker-quota-type-name_504de2"
        >
          5分枠
        </p>
        <p
          class="_enshita-event-speaker-quota-type-currently_504de2"
        >
          3
           / 
          5
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`(component) EventOverview > Snap Shot - open 1`] = `
<div>
  <div
    class="_enshita-event-overview_504de2"
  >
    <div
      class="_enshita-event-date_06bc2d"
    >
      <time>
        2022/08/27 (Sat)
      </time>
      <time>
        <span>
          19:30 ~ 23:00
        </span>
      </time>
    </div>
    <div
      class="_enshita-event-venue_504de2"
    >
      <span />
      <p>
        Discord
      </p>
    </div>
    <div
      class="_enshita-event-apply_504de2"
    >
      <a
        class="_enshita-button-box_fd3da4 _enshita-event-apply-box_504de2"
        href="/apply/123456789"
        rel="noopener noreferrer"
        role="button"
        target=""
      >
        <p
          class="_enshita-button-text_fd3da4 undefined"
        >
          申し込む
        </p>
      </a>
    </div>
    <div
      class="_enshita-event-deadline_504de2"
    >
      <time>
        2022/08/27 (Sat) 00:00まで
      </time>
      <p>
        ※申し込み締切時間は変更される可能性があります
      </p>
    </div>
    <div
      class="_enshita-event-speaker-quota-type-list_504de2"
    >
      <div
        class="_enshita-event-speaker-quota-type_504de2"
      >
        <p
          class="_enshita-event-speaker-quota-type-name_504de2"
        >
          3分枠
        </p>
        <p
          class="_enshita-event-speaker-quota-type-currently_504de2"
        >
          2
           / 
          5
        </p>
      </div>
      <div
        class="_enshita-event-speaker-quota-type_504de2"
      >
        <p
          class="_enshita-event-speaker-quota-type-name_504de2"
        >
          5分枠
        </p>
        <p
          class="_enshita-event-speaker-quota-type-currently_504de2"
        >
          3
           / 
          5
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`(component) EventOverview > Snap Shot - preparing 1`] = `
<div>
  <div
    class="_enshita-event-overview_504de2"
  >
    <div
      class="_enshita-event-date_06bc2d"
    >
      <time>
        2022/08/27 (Sat)
      </time>
      <time>
        <span>
          19:30 ~ 23:00
        </span>
      </time>
    </div>
    <div
      class="_enshita-event-apply_504de2"
    >
      <button
        class="_enshita-button-box_44d66e _enshita-event-apply-box_504de2"
        disabled=""
        tabindex="0"
      >
        <p
          class="_enshita-button-text_44d66e undefined"
        >
          申し込み開始前
        </p>
      </button>
    </div>
    <div
      class="_enshita-event-deadline_504de2"
    >
      <time>
        2022/08/27 (Sat) 00:00まで
      </time>
      <p>
        ※申し込み締切時間は変更される可能性があります
      </p>
    </div>
    <div
      class="_enshita-event-speaker-quota-type-list_504de2"
    >
      <div
        class="_enshita-event-speaker-quota-type_504de2"
      >
        <p
          class="_enshita-event-speaker-quota-type-name_504de2"
        >
          3分枠
        </p>
        <p
          class="_enshita-event-speaker-quota-type-currently_504de2"
        >
          2
           / 
          5
        </p>
      </div>
      <div
        class="_enshita-event-speaker-quota-type_504de2"
      >
        <p
          class="_enshita-event-speaker-quota-type-name_504de2"
        >
          5分枠
        </p>
        <p
          class="_enshita-event-speaker-quota-type-currently_504de2"
        >
          3
           / 
          5
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`(component) EventOverview > Snap Shot - suddenClose 1`] = `
<div>
  <div
    class="_enshita-event-overview_504de2"
  >
    <div
      class="_enshita-event-date_06bc2d"
    >
      <time>
        2022/08/27 (Sat)
      </time>
      <time>
        <span>
          19:30 ~ 23:00
        </span>
      </time>
    </div>
    <div
      class="_enshita-event-venue_504de2"
    >
      <span />
      <p>
        Discord
      </p>
    </div>
    <div
      class="_enshita-event-apply_504de2"
    >
      <button
        class="_enshita-button-box_44d66e _enshita-event-apply-box_504de2"
        disabled=""
        tabindex="0"
      >
        <p
          class="_enshita-button-text_44d66e undefined"
        >
          申し込みは終了しました
        </p>
      </button>
    </div>
    <div
      class="_enshita-event-deadline_504de2"
    >
      <time>
        2022/08/27 (Sat) 00:00まで
      </time>
      <p>
        ※申し込み締切時間は変更される可能性があります
      </p>
    </div>
    <div
      class="_enshita-event-speaker-quota-type-list_504de2"
    >
      <div
        class="_enshita-event-speaker-quota-type_504de2"
      >
        <p
          class="_enshita-event-speaker-quota-type-name_504de2"
        >
          3分枠
        </p>
        <p
          class="_enshita-event-speaker-quota-type-currently_504de2"
        >
          2
           / 
          5
        </p>
      </div>
      <div
        class="_enshita-event-speaker-quota-type_504de2"
      >
        <p
          class="_enshita-event-speaker-quota-type-name_504de2"
        >
          5分枠
        </p>
        <p
          class="_enshita-event-speaker-quota-type-currently_504de2"
        >
          3
           / 
          5
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`(component) EventOverview > Snap Shot - suddenOpen 1`] = `
<div>
  <div
    class="_enshita-event-overview_504de2"
  >
    <div
      class="_enshita-event-date_06bc2d"
    >
      <time>
        2022/08/27 (Sat)
      </time>
      <time>
        <span>
          19:30 ~ 23:00
        </span>
      </time>
    </div>
    <div
      class="_enshita-event-venue_504de2"
    >
      <span />
      <p>
        Discord
      </p>
    </div>
    <div
      class="_enshita-event-apply_504de2"
    >
      <a
        class="_enshita-button-box_fd3da4 _enshita-event-apply-box_504de2"
        href="/apply/123456789"
        rel="noopener noreferrer"
        role="button"
        target=""
      >
        <p
          class="_enshita-button-text_fd3da4 undefined"
        >
          飛び入りで申し込む
        </p>
      </a>
    </div>
    <div
      class="_enshita-event-deadline_504de2"
    >
      <time>
        2022/08/27 (Sat) 00:00まで
      </time>
      <p>
        ※申し込み締切時間は変更される可能性があります
      </p>
    </div>
    <div
      class="_enshita-event-speaker-quota-type-list_504de2"
    >
      <div
        class="_enshita-event-speaker-quota-type_504de2"
      >
        <p
          class="_enshita-event-speaker-quota-type-name_504de2"
        >
          3分枠
        </p>
        <p
          class="_enshita-event-speaker-quota-type-currently_504de2"
        >
          2
           / 
          5
        </p>
      </div>
      <div
        class="_enshita-event-speaker-quota-type_504de2"
      >
        <p
          class="_enshita-event-speaker-quota-type-name_504de2"
        >
          5分枠
        </p>
        <p
          class="_enshita-event-speaker-quota-type-currently_504de2"
        >
          3
           / 
          5
        </p>
      </div>
    </div>
  </div>
</div>
`;
